--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket_io_app",
+  "name": "prayer_times_app",
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
@@ -13,14 +13,8 @@
   "description": "",
   "dependencies": {
     "adhan": "^4.4.3",
-    "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
-    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "prayertiming": "^2.0.2",
-    "qrcode": "^1.5.4",
-    "socket.io": "^4.8.1"
   }
 }
